# Asteroids

./: CMakeLists.txt  Refrence.cpp  dependencies.cmake  project_options.cmake
cmake/: lto.cmake  sanitizers.cmake  warnings.cmake
include/: game.hpp
include/SDL/: OPGL.hpp  SDL.hpp
include/exceptions/: sdlexceptions.hpp
include/glad/: glad.h
include/math/: vector.hpp
src/: CMakeLists.txt  glad.c  main.cpp
src/SDL/: OPGL.cpp  SDL.cpp
src/game/: game.cpp
